@@ -3,4 +3,4 @@ CREATE TABLE IF NOT EXISTS admin(
 	user_id VARCHAR(100) NOT NULL
 );
 
-CREATE UNIQUE INDEX admin_index on admin(user_id);
+CREATE UNIQUE INDEX IF NOT EXISTS admin_index on admin(user_id);
